--- a/ker/mod/dom.css
+++ b/ker/mod/dom.css
@@ -2,7 +2,6 @@
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    margin: .5em;
     font-family: 'Josefin Sans', sans-serif;
 }
 
@@ -33,6 +32,11 @@ a, b, i, em, code, span {
 /*****************/
 /* Default theme */
 
+input:placeholder-shown {
+    color: rgba(50, 75, 120, .5);
+}
+
+     
 html, body {
     height: 100%;
     margin: 0;
