--- a/ker/com/x-article/x-article.com.css
+++ b/ker/com/x-article/x-article.com.css
@@ -1,8 +1,14 @@
 *{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}
 
 html, body {
-    height:100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
+    margin: 0;
+    font-family: fira;
 }
 
 section.x-article {
@@ -14,8 +20,29 @@ section.x-article {
     width: 100%;
     height: 100%;
     font-size: 12pt;
-    font-family: sans-serif;
-    background-color: lightgoldenrodyellow;
+    font-family: fira;
+    background-color: #f2f2d9;
+}
+
+section.x-article h1,
+section.x-article h2,
+section.x-article h3 {
+    border-bottom: 1px solid rgba(0,0,0,.5);
+    color: #420;
+    font-weight: 900;
+    font-variant: small-caps;
+}
+
+section.x-article h1 {
+    font-size: 150%;
+}
+
+section.x-article h2 {
+    font-size: 135%;
+}
+
+section.x-article h3 {
+    font-size: 120%;
 }
 
 section.x-article  a[href] {
@@ -26,7 +53,6 @@ section.x-article  a[href] {
 section.x-article  a[href]:hover {
     text-decoration: underline;
 }
-
 
 section.x-article > header {
     position: absolute;
@@ -69,71 +95,55 @@ section.x-article > article {
     left: 0;
     top: 2em;
     right: 0;
-    bottom: 2em;
+    bottom: 0;
     width: 100%;
     overflow: auto;
-    padding: .5em;
+    padding: 1em;
     max-width: 60em;
+    background-image: url(com/x-article/grain.png);
+    margin: 0;
 }
 
-section.x-article > footer {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    width: 100%;
-    height: 2em;
-    background-color: orange;
-    color: #000;
-    text-align: center;
-    overflow-x: auto;
-    box-shadow: 0 -2px 1em #000;
-    border-top: 1px solid #000;
+section.x-article > article p {
+    font-size: 120%;
+    line-height: 125%;
+    font-weight: 300;
 }
 
-section.x-article > footer > div {
-    position: relative;
-    display: table;
-    height: 100%;
+@media screen and (min-width : 60em) {
+    section.x-article > article {
+        top: 3em;
+        bottom: 1em;
+        width: 60em;
+        left: 50%;
+        margin-left: -30em;
+        box-shadow: 0 0 10px #000;
+    }
 }
 
-section.x-article > footer > div > div {
-    display: table-cell;
-    text-align: center;
-    vertical-align: middle;
-    height: 100%;
-    width: 2em;
-    margin: 0 2px;
+section.x-article footer {
+  border-top: 1px solid;
+  padding: 1em
 }
 
-section.x-article > footer > div > div > div {
-    font-weight: bold;
-    line-height: 1.6em;
+section.x-article footer span {
+  display: inline-block;
+  text-align: center;
+  width: 32px;
+  font-weight: 700;
 }
-
-section.x-article > footer > div > div > a[href] {
-    display: inline-block;
-    font-weight: normal;
-    text-decoration: none;
-    background: #840;
-    color: #eee;
-    height: 1.6em;
-    width: 2em;
-    line-height: 1.6em;
-    border: 1px solid orange;
-    box-shadow: 0 0 0 1px #840 inset;
-}
-
-section.x-article > footer > div > div > a:hover {
-    background-color: #420;
-}
-
 
 section.x-article blockquote {
     border-left: .5em solid darkorange;
     padding-left: .5em;
     margin-left: .5em;
-    font-size: 120%;
+    font-size: 100%;
     font-weight: 300;
-    line-height: 150%
+    line-height: 150%;
+    font-style: oblique;
 }
+
+strong, b {
+    font-weight: 900;
+}
+
