--- a/ker/mod/wdg.modal.css
+++ b/ker/mod/wdg.modal.css
@@ -22,6 +22,11 @@ div.wdg-modal > div {
     overflow: hidden;
 }
 
+div.wdg-modal.fadeout > div > div {
+    transform: scale(.1);
+    transition: all .2s;
+}
+
 div.wdg-modal > div > div {
     margin: 0;
     padding: 0;
@@ -30,6 +35,8 @@ div.wdg-modal > div > div {
     min-width: 240px;
     overflow: hidden;
     text-align: left;
+    transform: scale(1);
+    transition: all .2s;
 }
 
 div.wdg-modal.padding > div > div {
