--- a/ker/mod/wdg.modal.css
+++ b/ker/mod/wdg.modal.css
@@ -23,8 +23,9 @@ div.wdg-modal > div {
 }
 
 div.wdg-modal.fadeout > div > div {
+    opacity: 0;
     transform: scale(.1);
-    transition: all .2s;
+    transition: all .25s;
 }
 
 div.wdg-modal > div > div {
@@ -35,8 +36,9 @@ div.wdg-modal > div > div {
     min-width: 240px;
     overflow: hidden;
     text-align: left;
+    opacity: 1;
     transform: scale(1);
-    transition: all .2s;
+    transition: all .25s;
 }
 
 div.wdg-modal.padding > div > div {
