--- a/ker/mod/tfw.touchable.css
+++ b/ker/mod/tfw.touchable.css
@@ -1,3 +1,18 @@
 .tfw-touchable {
     cursor: pointer;
 }
+
+.tfw-touchable
+
+.tfw-touchable > div.tfw-touchable-shadow {
+  content: '.';
+  color: transparent;
+  position: absolute;
+  border-radius: 100%;
+  width: 256px;
+  height: 256px;
+  margin: -128px;
+  background: rgba(128,128,128,.5);
+  transform: scale(0);
+  transition: transform .6s;
+}
