--- a/ker/mod/wdg.checkbox.css
+++ b/ker/mod/wdg.checkbox.css
@@ -4,14 +4,15 @@
     margin: 0;
     border: 0;
     background: none;
-    padding: 0 8px 0 8px;
+    padding: 0 16px 0 8px;
     text-align: left;
     font-size: 1em;
-    text-height: 2em;
+    line-height: 2em;
     cursor: pointer;
     white-space: nowrap;
     overflow-x: hidden;
     text-overflow: ellipsis;
+    transition: all .2s;
 }
 
 .wdg-checkbox > * {
@@ -31,7 +32,6 @@
     margin-left: .5em;
 }
 
-
 .dark .wdg-checkbox {
     color: #eee;
 }
@@ -49,9 +49,49 @@
 }
 
 .wdg-checkbox div.label {
-    opacity: .5;
+    opacity: .4;
 }
 
 .wdg-checkbox.checked div.label {
     opacity: 1;
 }
+
+.wdg-checkbox > .wdg-checkbox-spin {
+    display: inline-block;
+    position: relative;
+    padding: 0 1em 0 0;
+    width: 1.1em;
+    height: 1.1em;
+    perspective: 200px;
+    overflow: visible;
+}
+
+.wdg-checkbox > .wdg-checkbox-spin > div {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+    transition: transform .5s;
+    transform: rotateY(180deg);
+}
+
+.wdg-checkbox.checked > .wdg-checkbox-spin > div {
+    transform: rotateY(0);
+}
+
+.wdg-checkbox > .wdg-checkbox-spin > div > div {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 100%;
+    border: none;
+    backface-visibility: hidden;
+    background: #0f0;
+}
+
+.wdg-checkbox > .wdg-checkbox-spin > div > div:last-child {
+    background: #f00;
+    transform: rotateY(180deg);
+}
+
+
