--- a/ker/mod/wdg.combo.css
+++ b/ker/mod/wdg.combo.css
@@ -79,7 +79,7 @@ div.wdg-combo > div.label {
 }
 
 ul.wdg-combo-modal {
-    max-height: 240px;
+    max-height: 60vh;
     overflow: auto;
     margin: 0;
     padding: 0 .2rem;
@@ -88,7 +88,7 @@ ul.wdg-combo-modal {
 
 ul.wdg-combo-modal > li {
     list-style: none;
-    margin: 0;
+    margin: .25rem 0;
     padding: .25rem .5rem;
     border-bottom: 1px solid rgba(0,0,0,.3);
     cursor: pointer;
