--- a/ker/mod/wdg.gravatar.css
+++ b/ker/mod/wdg.gravatar.css
@@ -1,8 +1,26 @@
 .wdg-gravatar {
-    background-color: rgba(0,0,0,.6);
-    background-position: 50% 50%;
-    background-size: contain;
-    background-repeat: no-repeat;
+    position: relative;
+    display: inline-block;
+    background-color: rgba(0,0,0,.3);
+    padding: 0;
+}
+
+.wdg-gravatar > img {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    transition: opacity .7s;
+    opacity: 1;
+}
+
+.wdg-gravatar.fade > img {
+    transition: opacity .7s;
+    opacity: 0;
 }
 
 .wdg-gravatar.hide {
