--- a/ker/mod/wdg.checkbox.css
+++ b/ker/mod/wdg.checkbox.css
@@ -68,11 +68,20 @@
 
 .wdg-checkbox > .wdg-checkbox-spin > div {
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 1.1em;
+    height: 1.1em;
     transform-style: preserve-3d;
     transition: transform .5s;
     transform: rotateY(180deg);
+    line-height: 1.1em;
+    padding: 0;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.wdg-checkbox > .wdg-checkbox-spin > div > div {
+    margin: 0;
+    vertical-align: middle;    
 }
 
 .wdg-checkbox.checked > .wdg-checkbox-spin > div {
@@ -81,6 +90,8 @@
 
 .wdg-checkbox > .wdg-checkbox-spin > div > div {
     position: absolute;
+    left: 0;
+    top: 0;
     width: 100%;
     height: 100%;
     border-radius: 100%;
@@ -90,7 +101,7 @@
 }
 
 .wdg-checkbox > .wdg-checkbox-spin > div > div:last-child {
-    background: #f00;
+    background: #d00;
     transform: rotateY(180deg);
 }
 
