Fix for IE11 on CheckBox. x-widget can take strings as content.

--- a/ker/mod/wdg.checkbox.css
+++ b/ker/mod/wdg.checkbox.css
@@ -98,6 +98,10 @@
     border: none;
     perspective: 200px;
     backface-visibility: hidden;
+    background: #d00;
+}
+
+.wdg-checkbox.checked > .wdg-checkbox-spin > div > div {
     background: #0f0;
 }
 
