Watcher now uses decodeURI for arguments on hash. Flex CSS improved.

--- a/ker/mod/wdg.flex.css
+++ b/ker/mod/wdg.flex.css
@@ -9,7 +9,8 @@ div.wdg-flex.H {
 }
 
 div.wdg-flex.V {
-  flex-direction: column;  
+  flex-direction: column;
+  height: 100%;
 }
 
 @media (orientation: portrait) {
