--- a/ker/mod/wdg.modal.css
+++ b/ker/mod/wdg.modal.css
@@ -62,6 +62,17 @@ div.wdg-modal div.scrollable {
     margin: 0;
 }
 
+div.wdg-modal.fullscreen > div > div {
+    max-height: 100vh;
+    height: 100%;
+    width: 100%;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    top: 0;
+    position: fixed;
+}
+
 @media (max-width: 490px) {
     div.wdg-modal > div > div {
         max-height: 100vh;
