--- a/ker/mod/wdg.button.css
+++ b/ker/mod/wdg.button.css
@@ -2,24 +2,82 @@
     vertical-align: middle;
     position: relative;
     display: inline-block;
-    line-height: 2rem;
-    min-height: 2rem;
-    padding: 0 .5rem;
-    background: #9cd;
-    color: #000;
+    line-height: 36px;
+    min-height: 36px;
+    padding: 0 16px;
     text-decoration: none;
-    border-radius: 8px;
+    border-radius: 2px;
     text-shadow: none;
     cursor: pointer;
-    margin: 4px 4px;
+    margin: 4px 8px;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
-    font-size: 1rem;
-    min-width: 64px;
+    min-width: 72px;
     transition: all .2s;
     text-align: left;
     border: none;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 500;
+    color: #000;
+    background-color: #fff;
+}
+
+.wdg-button.dom[disabled=yes]:hover,
+.wdg-button.dom[disabled=yes] {
+    pointer-event: none;
+    text-decoration: none;
+    cursor: default;
+    background: #888;
+    color: rgba(0,0,0,.4);
+    text-shadow: none;
+    box-shadow: none;
+    font-style: italic;
+}
+
+.wdg-button.dom[disabled=yes].flat:hover,
+.wdg-button.dom[disabled=yes].flat {
+    pointer-event: none;
+    text-decoration: none;
+    cursor: default;
+    background: transparent;
+}
+
+.wdg-button.primary {
+    background-color: rgb(16,108,200);
+    color: #fff;
+}
+
+.wdg-button.warning {
+    background-color: rgb(255,87,34);
+    color: #fff;
+}
+
+.wdg-button.primary.flat {
+    color: rgb(16,108,200);
+}
+
+.wdg-button.warning.flat {
+    color: rgb(255,87,34);
+}
+
+.wdg-button.flat:hover {
+    background-color: rgb(0,0,0,0.1);
+}
+
+.wdg-button.primary.flat:hover {
+    background-color: rgb(16,108,200,0.12);
+}
+
+.wdg-button.warning.flat:hover {
+    background-color: rgb(255,87,34,0.12);
+}
+
+.wdg-button.flat {
+    background-color: transparent;
+    box-shadow: none;
+    transform: translate(0,0);
 }
 
 .wdg-button > * {
@@ -45,57 +103,14 @@ a.wdg-button.hide, button.wdg-button.hide {
     display: none;
 }
 
-.wdg-button.small {
-    font-size: 70%;
-    padding: 0 .5rem;
-    margin: 0;
-    font-variant: small-caps;
-    min-width: 2rem;
-}
-
-.wdg-button.dom[disabled=yes]:hover,
-.wdg-button.dom[disabled=yes] {
-    pointer-event: none;
-    text-decoration: none;
-    cursor: default;
-    background: #888;
-    color: rgba(0,0,0,.4);
-    text-shadow: none;
-    box-shadow: none;
-    font-style: italic;
-}
-
-.wdg-button.shadow {
-    background-color: #69A;
-}
-
-.wdg-button.warning {
-    background-color: #c50;
-    color: #fff;
-}
-
-.wdg-button.special {
-    background-color: #9d7;
-}
-
-.wdg-button.simple[disabled=yes] {
-    background: none;
-}
-
-.wdg-button.simple {
-    color: #69b;
+.wdg-button.flat {
     border-radius: none;
     background: none;
     text-shadow: none;
     box-shadow: none;
-    font-size: 100%;
-    font-weight: bold;
-    line-height: 1rem;
-    min-height: 1rem;
-}
-
-.wdg-button.simple:hover {
-    text-decoration: underline;
+    line-height: 2rem;
+    min-height: 2rem;
+    transform: translate(0,0);
 }
 
 .wdg-button:focus {
