--- a/ker/mod/wdg.modal.css
+++ b/ker/mod/wdg.modal.css
@@ -7,7 +7,7 @@ div.wdg-modal {
     top: 0;
     right: 0;
     bottom: 0;
-    background: rgba(0,0,0,.5);
+    background: rgba(0,0,0,.7);
     z-index: 999999;
     opacity: 1;
     transition: opacity .2s;
@@ -86,3 +86,8 @@ div.wdg-modal.fullscreen > div > div {
     }
 }
 
+.wdg-modal-flush-right {
+    text-align: right;
+    margin: 24px 0 0 0;
+    padding: 0;
+}
