--- a/ker/mod/wdg.button.css
+++ b/ker/mod/wdg.button.css
@@ -18,6 +18,7 @@
     text-align: left;
     border: none;
     text-transform: uppercase;
+    font-family: Roboto, josefin-sans, sans-serif;
     font-size: 14px;
     font-weight: 500;
     color: #000;
