--- a/ker/mod/wdg.button.css
+++ b/ker/mod/wdg.button.css
@@ -87,12 +87,12 @@
     float: left;
 }
 
-.wdg-button[disabled=yes] > div.wdg-icon {
-    opacity: .25;
+.wdg-button > div.wdg-icon.flat {
+    margin: 0 8px 0 -8px;
 }
 
-.wdg-button > div.wdg-icon.flat {
-    margin: 0 .4rem 0 0;
+.wdg-button[disabled=yes] > div.wdg-icon {
+    opacity: .25;
 }
 
 a.wdg-button.wide, button.wdg-button.wide {
