--- a/ker/mod/wdg.checkbox.css
+++ b/ker/mod/wdg.checkbox.css
@@ -31,10 +31,6 @@
     margin-left: .5em;
 }
 
-.dark .wdg-checkbox {
-    color: #eee;
-}
-
 .wdg-checkbox.align-left {
     text-align: left;
 }
@@ -58,11 +54,12 @@
 .wdg-checkbox > .wdg-checkbox-spin {
     display: inline-block;
     position: relative;
-    padding: 0 1em 0 0;
-    width: 1.1em;
-    height: 1.1em;
+    padding: 0;
+    width: 24px;
+    height: 24px;
     perspective: 200px;
     overflow: visible;
+    border-radius: 12px;
 }
 
 .wdg-checkbox > .wdg-checkbox-spin > div {
@@ -97,15 +94,9 @@
     border: none;
     perspective: 200px;
     backface-visibility: hidden;
-    background: #d00;
-}
-
-.wdg-checkbox.checked > .wdg-checkbox-spin > div > div {
-    background: #0f0;
 }
 
 .wdg-checkbox > .wdg-checkbox-spin > div > div:last-child {
-    background: #d00;
     transform: perspective(200px) rotateY(180deg);
 }
 
