--- a/ker/mod/dom.css
+++ b/ker/mod/dom.css
@@ -270,17 +270,17 @@ html.thm-dark svg .fill1 { fill: #000 }
 
 /* Primary color. */
 .thm-bgP {
-    background-color: #1E88E5;
+    background-color: #36CD00;
     color: #fff;
 }
 
 .thm-bgPL {
-    background-color: #6AB7Ff;
+    background-color: #3CE600;
     color: #000;
 }
 
 .thm-bgPD {
-    background-color: #005CB2;
+    background-color: #2FB300;
     color: #fff;
 }
 
