--- a/ker/mod/wdg.button.css
+++ b/ker/mod/wdg.button.css
@@ -1,7 +1,7 @@
 .wdg-button {
   vertical-align: middle;
   position: relative;
-  display: flex;
+  display: inline-flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
@@ -15,10 +15,19 @@
   min-width: 72px;
   border: none;
   transition: all .2s;
+  font-family: Roboto, josefin-sans, sans-serif;
+  font-size: 14px;
+  font-weight: bold;
 }
 
 .wdg-button.wide {
   width: calc(100% - 16px);
+  display: flex;
+}
+
+.wdg-button.hide,
+.wdg-button.hide.wide {
+  display: none;
 }
 
 .wdg-button.flat {
@@ -37,22 +46,19 @@
   overflow: hidden;
   text-align: left;
   text-transform: uppercase;
-  font-family: Roboto, josefin-sans, sans-serif;
-  font-size: 14px;
-  font-weight: 500;
   margin: 0 8px;
 }
 
 .wdg-button > div.wdg-icon {
   order: 1;
   flex-grow: 0;
-  margin: 0 8px 0 0;
+  margin: 0 8px 0 4px;
   padding: 0;
 }
 
 .wdg-button.iconToLeft > div.wdg-icon {
   order: -1;
-  margin: 0 0 0 8px;
+  margin: 0 4px 0 8px;
 }
 
 .wdg-button.disabled:hover,
