--- a/ker/mod/wdg.floating-button.css
+++ b/ker/mod/wdg.floating-button.css
@@ -14,6 +14,16 @@
   height: 40px;
 }
 
+.wdg-floating-button.disabled,
+.wdg-floating-button.disabled.thm-ele6 {
+  cursor: default;
+  box-shadow: none;
+}
+
+.wdg-floating-button.disabled > * {
+  opacity: .5;
+}
+
 .wdg-floating-button > * {
   flex-grow: 0;
   flex-shrink: 0;
