--- a/ker/mod/wdg.button.css
+++ b/ker/mod/wdg.button.css
@@ -49,14 +49,14 @@
   margin: 0 8px;
 }
 
-.wdg-button > div.wdg-icon {
+.wdg-button > .wdg-icon {
   order: 1;
   flex-grow: 0;
   margin: 0 8px 0 4px;
   padding: 0;
 }
 
-.wdg-button.iconToLeft > div.wdg-icon {
+.wdg-button.iconToLeft > .wdg-icon {
   order: -1;
   margin: 0 4px 0 8px;
 }
