--- a/ker/mod/dom.css
+++ b/ker/mod/dom.css
@@ -28,6 +28,34 @@ a, b, i, em, code, span {
     display: none;
 }
 
+/*********************/
+/* Responsive Design */
+@media (max-width: 320px) {
+  .dom-hide-if-lt-320 { display: none  }
+}
+
+@media (min-width: 320px) {
+  .dom-hide-if-gt-320 { display: none  }
+}
+
+@media (max-width: 480px) {
+  .dom-hide-if-lt-480 { display: none  }
+}
+
+@media (min-width: 480px) {
+  .dom-hide-if-gt-480 { display: none  }
+}
+
+@media (max-width: 640px) {
+  .dom-hide-if-lt-640 { display: none  }
+}
+
+@media (min-width: 640px) {
+  .dom-hide-if-gt-640 { display: none  }
+}
+
+
+
 /*****************/
 /* Default theme */
 
@@ -279,14 +307,23 @@ html.thm-dark svg .fill1 { fill: #000 }
     background-color: #2CA600;
     color: #fff;
 }
+.thm-bgP > div {
+    color: #fff;
+}
 
 .thm-bgPL {
     background-color: #36CD00;
     color: #000;
 }
+.thm-bgPL > div {
+    color: #000;
+}
 
 .thm-bgPD {
     background-color: #218000;
+    color: #fff;
+}
+.thm-bgPD > div {
     color: #fff;
 }
 
