--- a/ker/mod/wdg.checkbox.css
+++ b/ker/mod/wdg.checkbox.css
@@ -47,6 +47,7 @@
   overflow-x: hidden;
   text-overflow: ellipsis;
   flex-grow: 1;
+  text-align: left;
 }
 
 .wdg-checkbox.no-text > div:last-child {
