--- a/ker/mod/wdg.modal.css
+++ b/ker/mod/wdg.modal.css
@@ -29,7 +29,7 @@ div.wdg-modal .cell > header {
 }
 
 div.wdg-modal .cell > footer {
-  justify-content: end;
+  justify-content: flex-end;
   align-items: center;
   height: 48px;
   padding: 0 8px;
