--- a/ker/mod/tfw.view.checkbox.css
+++ b/ker/mod/tfw.view.checkbox.css
@@ -53,7 +53,7 @@ button.tfw-view-checkbox > div.pin > div.btn {
   height: 20px;
   border-radius: 10px;
   transform: translateX(0);
-  transition: all .1s;
+  transition: transform .2s, opacity .2s;
 }
 
 button.tfw-view-checkbox.ok > div.txt {
